# WikipediaQA

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
wikipediaqa/: QAModel.py  SentenceModel.py  TextProcessor.py  WikiParser.py  WikiQA.py  __init__.py
