[project]
name = "WikipediaQA"
version = "0.1.0"
description = "Python project for answering questions based on Wikipedia"
authors = [
    "Savelov Dmitriy <savasavelc@mail.ru>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JosephThePatrician/WikipediaQA"
repository = "https://github.com/JosephThePatrician/WikipediaQA"
documentation = "https://github.com/JosephThePatrician/WikipediaQA"

[build-system]
requires = ["setuptools", "wheel"]